--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Explore</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur odio blanditiis alias nihil harum reiciendis. Ducimus debitis, quae perspiciatis ea praesentium possimus sit in, perferendis quasi illum expedita a vel excepturi culpa. Incidunt in rerum, obcaecati ex temporibus sed veniam facilis sequi molestiae deserunt deleniti! Vero debitis inventore repellendus. Assumenda.</p>
     <h2>Heading 2</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quas iusto accusantium vitae sequi alias voluptates, impedit magni architecto excepturi earum aut, aliquam aspernatur officiis placeat magnam consequatur soluta aperiam voluptatibus adipisci dicta natus consequuntur odio. Velit, veritatis fuga voluptatibus, inventore ad beatae rerum quos aut sit hic adipisci? Minus commodi atque ut odit, incidunt dignissimos asperiores eveniet dolore quae? Repellendus placeat magnam eos repellat magni aut deserunt iste expedita voluptatibus sed! Consequatur suscipit error, beatae similique odio placeat quas sit rem qui laborum dolorum exercitationem quam. Deleniti ea rerum non vel neque, animi explicabo dolorum labore harum! Voluptas, aspernatur?
-        
+
     </p>
+    <audio controls src="./audio/turkish.mp3"></audio>
+    <video sontrols src="./Video/ocean.mp4"></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1yrFxd2_fmc?si=Kham2Ty7M1Wne9mu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
+
 </body>
 </html> 
