--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur odio blanditiis alias nihil harum reiciendis. Ducimus debitis, quae perspiciatis ea praesentium possimus sit in, perferendis quasi illum expedita a vel excepturi culpa. Incidunt in rerum, obcaecati ex temporibus sed veniam facilis sequi molestiae deserunt deleniti! Vero debitis inventore repellendus. Assumenda.</p>
     <h2>Heading 2</h2>
