--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Blogs</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="./pages/home.html">Home</a></li>
+                <li><a href="./pages/blog.html">Blogs</a></li>
+                <li><a href="./pages/contact.html">Contact Us</a></li>
                 <li><a href="">About</a></li>
             </ul>
         </nav>
