--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./pages/home.html">Home</a></li>
-                <li><a href="./pages/blog.html">Blogs</a></li>
-                <li><a href="./pages/contact.html">Contact Us</a></li>
+                <li><a href="./pages/home.html" target="_blank">Home</a></li>
+                <li><a href="./pages/blog.html" target="_blank">Blogs</a></li>
+                <li><a href="./pages/contact.html" target="_blank">Contact Us</a></li>
                 <li><a href="">About</a></li>
             </ul>
         </nav>
@@ -29,6 +29,17 @@
         <audio controls src="./audio/turkish.mp3"></audio>
         <video sontrols src="./Video/ocean.mp4"></video>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/1yrFxd2_fmc?si=Kham2Ty7M1Wne9mu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        /* About Section*/
+        <section>
+            <h2>About</h2>
+            <p>This is Tarek Saifullah, currently trying to learning web development from a famous online course provided by brother Jhonkar Mahbub in Programing Hero online course.
+            </p>
+            <p>
+                Thank you for visiting my website. You can contact me: <br>
+                Mail: tsaifullah@hotmail.com <br>
+                Website: https://tareksaifullah.github.io/PH-Milestone1-Basic-HTML-CSS-3/
+            </p>
+        </section>
     </body>
     <footer>
         <p>@Copyright 2026 reserved</p>
